A propos et page 404 routées et effectives

--- a/src/pages/location/Location.css
+++ b/src/pages/location/Location.css
@@ -8,6 +8,12 @@
     
 }
 
+#containerTwo ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
 @media (max-width: 768px) {
     #containerOne, #containerTwo {
         margin-top: -10px;
