--- a/src/components/indexCards/IndexCards.css
+++ b/src/components/indexCards/IndexCards.css
@@ -21,7 +21,7 @@
 
 .card p {
     position: absolute;
-    bottom: 0px;
+    bottom: 0.2em;
     left: 1em;
     color: white;
     font-size: 1em;
