--- a/src/components/unfoldingText/UnfoldingText.css
+++ b/src/components/unfoldingText/UnfoldingText.css
@@ -12,6 +12,7 @@
     line-height: 1.5em;
     border-radius: 5px;
     font-size: 24px;
+    position: relative;
 }
 
 .unfoldingDescription {
@@ -22,8 +23,32 @@
     padding: 6px 0 1em 0.5em;
 }
 
-p {
+.unfoldingContainer p {
     margin: 0;
+}
+
+
+.vector {
+    position: absolute;
+    z-index: 1;
+    right: 1em;
+    cursor: pointer;
+}
+
+.vUp {
+    top: 10px;
+}
+
+.vDown {
+    top: 4px;
+}
+
+.enabled {
+    display: block;
+}
+
+.disabled {
+    display: none;
 }
 
 @media (max-width: 992px) {
