page location : équipement + description même hauteur, , résolution nouveau problème footer, cadrage optimal des photos carousel

--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -16,6 +16,17 @@
     cursor: pointer;
     margin-right: 2em;
     color: #FF6060;
+
+    
+
+}
+
+.active-nav {
+    text-decoration: underline;
+}
+
+.not-active-nav {
+    text-decoration: none;
 }
 
 @media (max-width: 992px) {
