--- a/src/components/carousel/Carousel.css
+++ b/src/components/carousel/Carousel.css
@@ -1,16 +1,17 @@
 #carouselContainer {
-    width: 100%;
-    height: 400px;
+    width: fit-content;
+    max-height: 800px;
     position: relative;
     overflow: hidden;
     border-radius: 25px;
+    margin: auto;
     margin-bottom: 20px;
 }
 
 .visiblePicture {
-    object-fit: fill;
+    object-fit: cover;
     width: 100%;
-    /* min-height: 100%; */
+    height: 100%;
     border-radius: 25px;
 }
 
@@ -19,7 +20,7 @@
     z-index: 2;
     cursor: pointer;
     user-select: none;
-    top: 140px;
+    top: 350px;
 }
 
 #arrBack {
@@ -41,11 +42,15 @@
 
 @media (max-width: 768px) {
 
+    .visiblePicture {
+        object-fit: fill;
+    }
+
     #carouselContainer {
+        width: 100%;
         height: auto;
         margin-bottom: 10px;
     }
-
 
     #arrBack, #arrForw {
         width: 36px;
